--- a/uwthesis.bib
+++ b/uwthesis.bib
@@ -53,7 +53,7 @@ Eprint = {arXiv:1512.03385},
 @article{GPT2,
 author = {OpenAI},
 title = {Better Language Models and Their Implications},
-howpublished = {https://openai.com/blog/better-language-models},
+howpublished = {\url{https://openai.com/blog/better-language-models}},
 month = {},
 year = {},
 note = {(Accessed on 03/28/2019)}
@@ -62,7 +62,7 @@ note = {(Accessed on 03/28/2019)}
 @article{gpt2Time,
 author = {Reddit},
 title = {OpenAI: Better Language Models and Their Implications: Machine Learning},
-howpublished = {https://www.reddit.com/r/MachineLearning/comments/aqlzde/r_openai_better_language_models_and_their/},
+howpublished = {\url{https://www.reddit.com/r/MachineLearning/comments/aqlzde/r_openai_better_language_models_and_their/}},
 month = {},
 year = {},
 note = {(Accessed on 03/28/2019)}
@@ -89,9 +89,9 @@ note = {(Accessed on 03/28/2019)}
 }
 
 @misc{AIandCom3:online,
-author = {},
+author = {OpenAI},
 title = {AI and Compute},
-howpublished = {https://openai.com/blog/ai-and-compute},
+howpublished = {\url{https://openai.com/blog/ai-and-compute}},
 month = {},
 year = {},
 note = {(Accessed on 03/28/2019)}
@@ -121,7 +121,7 @@ note = {(Accessed on 03/28/2019)}
 @misc{IDCRepor64:online,
 author = {},
 title = {IDC Report: The New Need for Speed in the Datacenter Network},
-howpublished = {https://www.cisco.com/c/dam/en/us/products/collateral/switches/nexus-9000-series-switches/white-paper-c11-734328.pdf},
+howpublished = {\url{https://www.cisco.com/c/dam/en/us/products/collateral/switches/nexus-9000-series-switches/white-paper-c11-734328.pdf}},
 month = {},
 year = {},
 note = {(Accessed on 04/03/2019)}
@@ -130,7 +130,7 @@ note = {(Accessed on 04/03/2019)}
 @misc{EC2Netwo58:online,
 author = {},
 title = {EC2 Network Performance Cheat Sheet | cloudonaut},
-howpublished = {https://cloudonaut.io/ec2-network-performance-cheat-sheet/},
+howpublished = {\url{https://cloudonaut.io/ec2-network-performance-cheat-sheet/}},
 month = {},
 year = {},
 note = {(Accessed on 04/03/2019)}
@@ -139,7 +139,7 @@ note = {(Accessed on 04/03/2019)}
 @misc{Introduc72:online,
 author = {},
 title = {Introducing the new HB and HC Azure VM sizes for HPC | Blog | Microsoft Azure},
-howpublished = {https://azure.microsoft.com/en-us/blog/introducing-the-new-hb-and-hc-azure-vm-sizes-for-hpc/},
+howpublished = {\url{https://azure.microsoft.com/en-us/blog/introducing-the-new-hb-and-hc-azure-vm-sizes-for-hpc/}},
 month = {},
 year = {},
 note = {(Accessed on 04/03/2019)}
@@ -148,7 +148,7 @@ note = {(Accessed on 04/03/2019)}
 @misc{NewC5nIn20:online,
 author = {},
 title = {New C5n Instances with 100 Gbps Networking | AWS News Blog},
-howpublished = {https://aws.amazon.com/blogs/aws/new-c5n-instances-with-100-gbps-networking/},
+howpublished = {\url{https://aws.amazon.com/blogs/aws/new-c5n-instances-with-100-gbps-networking/}},
 month = {},
 year = {},
 note = {(Accessed on 04/03/2019)}
@@ -207,7 +207,7 @@ note = {(Accessed on 04/03/2019)}
   volume={abs/1801.09805}
 }
 
-@inproceeding{backprop,
+@inproceedings{backprop,
 	author = {Rumelhart, David E. and Hinton, Geoffrey E. and Williams, Ronald J.},
 	chapter = {Learning Representations by Back-propagating Errors},
 	title = {Neurocomputing: Foundations of Research},
@@ -223,9 +223,9 @@ note = {(Accessed on 04/03/2019)}
 }
 
 @misc{MXNetont0:online,
-	author = {},
+	author = {MxNet},
 	title = {MXNet on the Cloud — mxnet documentation},
-	howpublished = {https://mxnet.incubator.apache.org/faq/cloud.html?highlight=ec2},
+	howpublished = {\url{https://mxnet.incubator.apache.org/faq/cloud.html?highlight=ec2}},
 	month = {},
 	year = {},
 	note = {(Accessed on 05/09/2018)}
@@ -250,9 +250,9 @@ note = {(Accessed on 04/03/2019)}
 }
 
 @misc{Distribu25:online,
-	author = {},
+	author = {Facebook},
 	title = {Distributed Training | Caffe2},
-	howpublished = {https://caffe2.ai/docs/distributed-training.html},
+	howpublished = {\url{https://caffe2.ai/docs/distributed-training.html}},
 	month = {},
 	year = {},
 	note = {(Accessed on 05/09/2018)}
@@ -261,7 +261,7 @@ note = {(Accessed on 04/03/2019)}
 @misc{ApacheMX19:online,
 	author = {},
 	title = {Apache MXNet on AWS},
-	howpublished = {https://aws.amazon.com/mxnet/},
+	howpublished = {\url{https://aws.amazon.com/mxnet/}},
 	month = {},
 	year = {},
 	note = {(Accessed on 05/09/2018)}
@@ -347,7 +347,7 @@ url="https://doi.org/10.1007/978-0-387-32833-1_379"
 
 @MISC{BerkleyCS294,
 	title = {Scaling Deep Learning},
-	howpublished = {https://berkeley-deep-learning.github.io/cs294-131-s17/slides/Catanzaro_Berkeley_CS294.pdf}
+	howpublished = {\url{https://berkeley-deep-learning.github.io/cs294-131-s17/slides/Catanzaro_Berkeley_CS294.pdf}}
 }
 
 @article{DBLP:journals/corr/abs-1712-01887,
@@ -404,27 +404,28 @@ url="https://doi.org/10.1007/978-0-387-32833-1_379"
 
 @misc{TFPS,
 	title = {Distributed {TensorFlow}},
-	howpublished = {https://www.tensorflow.org/deploy/distributed},
+	howpublished = {\url{https://www.tensorflow.org/deploy/distributed}},
 }
 
 @misc{Gloo,
 	title = {Facebook {Gloo} collectives algorithms library},
-	howpublished = {https://github.com/facebookincubator/gloo/blob/master/docs/algorithms.md},
+	howpublished = {\url{https://github.com/facebookincubator/gloo/blob/master/docs/algorithms.md}},
 }
 
 @misc{PSLite,
 	title = {A light and efficient implementation of the parameter server framework. It provides clean yet powerful APIs. For example, a worker node can communicate with the server nodes by},
-	howpublished = {https://github.com/dmlc/ps-lite},
+	howpublished = {\url{https://github.com/dmlc/ps-lite}},
 }
 
 @misc{AMDEpyc,
+    author = {AMD},
 	title = {{AMD EPYC}},
-	howpublished = {http://www.amd.com/en/products/epyc}
+	howpublished = {\url{http://www.amd.com/en/products/epyc}}
 }
 
 @misc{IBMAnnouncement,
 	title = {{IBM} {Research} achieves record deep learning performance with new software technology },
-	howpublished = {https://www.ibm.com/blogs/research/2017/08/distributed-deep-learning/}
+	howpublished = {\url{https://www.ibm.com/blogs/research/2017/08/distributed-deep-learning/}}
 }
 
 @inproceedings{GeePS,
@@ -473,27 +474,28 @@ url="https://doi.org/10.1007/978-0-387-32833-1_379"
 
 @misc{subminibatching,
 title= {How to use sub mini batching?},
-howpublished={https://github.com/Microsoft/CNTK/issues/1938}
+howpublished={\url{https://github.com/Microsoft/CNTK/issues/1938}}
 }
 	
 @misc{EpycBenchmark,
+author = {AMD},
 title = {{Epyc} Benchmarks},
-howpublished = {https://www.amd.com/en/products/epyc-benchmarks}
+howpublished = {\url{https://www.amd.com/en/products/epyc-benchmarks}}
 }
 
 @misc{Chainer,
 	title = {Performance of Distributed Deep Learning using {ChainerMN}},
-	howpublished = {https://chainer.org/general/2017/02/08/Performance-of-Distributed-Deep-Learning-Using-ChainerMN.html}
+	howpublished = {\url{https://chainer.org/general/2017/02/08/Performance-of-Distributed-Deep-Learning-Using-ChainerMN.html}}
 }
 
 @misc{ResNextRepo,
 	title = {{ResNeXt}: {Aggregated} Residual Transformations for Deep Neural Networks},
-	howpublished = {https://github.com/facebookresearch/ResNeXt}
+	howpublished = {\url{https://github.com/facebookresearch/ResNeXt}}
 }
 
 @misc{ec2BW,
 	title = {EC2Instances.info {Easy} {Amazon} {EC2} Instance Comparison},
-	howpublished = {https://www.ec2instances.info/?region=us-west-2}
+	howpublished = {\url{https://www.ec2instances.info/?region=us-west-2}}
 }
 
 
@@ -518,9 +520,9 @@ howpublished = {https://www.amd.com/en/products/epyc-benchmarks}
 }
 
 @misc{AzureWin5:online,
-	author = {},
+	author = {Microsoft},
 	title = {{Azure} {Windows} {VM} sizes - {HPC}},
-	howpublished = {https://docs.microsoft.com/en-us/azure/virtual-machines/windows/sizes-hpc},
+	howpublished = {\url{https://docs.microsoft.com/en-us/azure/virtual-machines/windows/sizes-hpc}},
 	month = {},
 	year = {},
 	note = {(Accessed on 01/11/2018)}
@@ -591,7 +593,7 @@ year={2016}
 }
 
 @misc{baidures3:online,
-	author = {},
+	author = {Baidu},
 	title = {baidu-research/baidu-allreduce},
 	howpublished = {https://github.com/baidu-research/baidu-allreduce},
 	month = {},
@@ -685,7 +687,7 @@ year={2016}
 @misc{Placemen61:online,
 	author = {},
 	title = {Placement Groups - Amazon Elastic Compute Cloud},
-	howpublished = {https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/placement-groups.html#placement-groups-cluster},
+	howpublished = {\url{https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/placement-groups.html#placement-groups-cluster}},
 	month = {},
 	year = {},
 	note = {(Accessed on 05/11/2018)}
@@ -873,8 +875,8 @@ year={2016}
 
 @misc{CloudTPU88:online,
 	author = {},
-	title = {Cloud TPUs - ML accelerators for TensorFlow  |  Google Cloud},
-	howpublished = {https://cloud.google.com/tpu/},
+	title = {Cloud TPUs - ML accelerators for TensorFlow, Google Cloud},
+	howpublished = {\url{https://cloud.google.com/tpu/}},
 	month = {},
 	year = {},
 	note = {(Accessed on 05/16/2018)}
@@ -883,7 +885,7 @@ year={2016}
 @misc{MachineL65:online,
 	author = {},
 	title = {Machine Learning | Microsoft Azure},
-	howpublished = {https://azure.microsoft.com/en-us/services/machine-learning-studio/},
+	howpublished = {\url{https://azure.microsoft.com/en-us/services/machine-learning-studio/}},
 	month = {},
 	year = {},
 	note = {(Accessed on 05/16/2018)}
@@ -956,6 +958,7 @@ publisher = {{USENIX} Association},
 } 
 
 @MISC{CISCOMarket, 
+author= {Cisco},
 title = {The Market Need for 40 Gigabit Ethernet}, howpublished = {\url{http://www.cisco.com/c/en/us/products/collateral/switches/catalyst-6500-series-switches/white_paper_c11-696667.html}}
 }
 
@@ -1123,62 +1126,66 @@ publisher = {{USENIX} Association},
 
 
 @misc{nvidia-1080ti,
+author = {Nvidia},
 title= {NVIDIA 1080 Ti advertised price},
-howpublished={https://www.nvidia.com/en-us/geforce/products/10series/geforce-gtx-1080-ti}
+howpublished={\url{https://www.nvidia.com/en-us/geforce/products/10series/geforce-gtx-1080-ti}}
 }
 
 @misc{nvidia-v100,
+author = {Nvidia},
 title= {NVIDIA V100 advertised price},
-howpublished={https://www.thinkmate.com/product/nvidia/900-2g500-0000-000}
+howpublished={\url{https://www.thinkmate.com/product/nvidia/900-2g500-0000-000}}
 }
 
 @misc{mellanox-eth,
+author = {Nvidia},
 title= {Mellanox Ethernet card prices},
-howpublished={https://store.mellanox.com/categories/
-adapters/ethernet-adapter-cards.html}
+howpublished={\url{https://store.mellanox.com/categories/adapters/ethernet-adapter-cards.html}}
 }
 
 @misc{mellanox-cable,
+author = {Nvidia},
 title= {Mellanox Ethernet cable prices},
-howpublished={https://store.mellanox.com/categories/
-interconnect/ethernet-cables/direct-attach-copper-cables.html}
+howpublished={\url{https://store.mellanox.com/categories/interconnect/ethernet-cables/direct-attach-copper-cables.html}}
 }
 
 @misc{mellanox-splitter,
+author = {Nvidia},
 title= {Mellanox Ethernet splitter prices},
-howpublished={https://store.mellanox.com/categories/interconnect/ethernet-cables/dac-splitter-cables.html}
+howpublished={\url{https://store.mellanox.com/categories/interconnect/ethernet-cables/dac-splitter-cables.html}}
 }
 
 @misc{worker-price,
+author = {SuperMicro},
 title= {SuperMicro worker node price},
-howpublished={https://www.thinkmate.com/system/
-superserver-1028gq-tr}
+howpublished={\url{https://www.thinkmate.com/system/superserver-1028gq-tr}}
 }
 
 @misc{phub-price,
+author = {SuperMicro},
 title= {SuperMicro PHub node price},
-howpublished={https://www.thinkmate.com/system/
-superserver-6038r-txr}
+howpublished={\url{https://www.thinkmate.com/system/superserver-6038r-txr}}
 }
 
 @misc{arista-price,
+author = {Arista},
 title= {Arista 7060CX-32S price},
-howpublished={https://goo.gl/cqyBtA}
+howpublished={\url{https://goo.gl/cqyBtA}}
 }
 
 @misc{MXNetont97:online,
-author = {},
+author = {MxNet},
 title = {MXNet on the Cloud — mxnet documentation},
-howpublished = {https://mxnet.incubator.apache.org/faq/cloud.html?highlight=ec2},
+howpublished = {\url{https://mxnet.incubator.apache.org/faq/cloud.html?highlight=ec2}},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
 }
 
 @misc{pytorchr46:online,
-author = {},
+author = {Facebook},
 title = {pytorch/resnet50\_trainer.py at master · pytorch/pytorch},
-howpublished = {https://github.com/pytorch/pytorch/blob/master/caffe2/python/examples/resnet50_trainer.py},
+howpublished = {\url{https://github.com/pytorch/pytorch/blob/master/caffe2/python/examples/resnet50_trainer.py}},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
@@ -1186,27 +1193,27 @@ note = {(Accessed on 12/07/2018)}
 
 
 @misc{GoogleCl74:online,
-author = {},
+author = {Google},
 title = {Google Cloud Training. Google Cloud},
-howpublished = {https://cloud.google.com/training/courses/machine-learning-tensorflow-gcp},
+howpublished = {\url{https://cloud.google.com/training/courses/machine-learning-tensorflow-gcp}},
 month = {},
 year = {},
 note = {(Accessed on 03/04/2019)}
 }
 
 @misc{MachineL50:online,
-author = {},
+author = {Microsoft},
 title = {Machine Learning Studio. Microsoft Azure},
-howpublished = {https://azure.microsoft.com/en-us/services/machine-learning-studio/},
+howpublished = {\url{https://azure.microsoft.com/en-us/services/machine-learning-studio/}},
 month = {},
 year = {},
 note = {(Accessed on 12/06/2018)}
 }
 
 @misc{DeepLear23:online,
-author = {},
+author = {Amazon},
 title = {Deep Learning on AWS},
-howpublished = {https://aws.amazon.com/deep-learning/},
+howpublished = {\url{https://aws.amazon.com/deep-learning/}},
 month = {},
 year = {},
 note = {(Accessed on 12/06/2018)}
@@ -1276,9 +1283,9 @@ doi = {10.1007/978-3-540-24685-5_1}
 }
 
 @misc{Operatio73:online,
-author = {},
+author = {Nvidia},
 title = {Operations - NCCL 2.3.4 documentation},
-howpublished = {https://docs.nvidia.com/deeplearning/sdk/nccl-developer-guide/docs/usage/operations.html},
+howpublished = {\url{https://docs.nvidia.com/deeplearning/sdk/nccl-developer-guide/docs/usage/operations.html}},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
@@ -1294,7 +1301,7 @@ note = {(Accessed on 12/07/2018)}
 
 
 @misc{Placemen48:online,
-author = {},
+author = {Amazon},
 title = {Placement Groups - Amazon Elastic Compute Cloud},
 howpublished = {https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/placement-groups.html},
 month = {},
@@ -1311,54 +1318,54 @@ title = {EyeQ: practical network performance isolation for the multi-tenant clou
 }
 
 @misc{27Octobe15:online,
-author = {},
+author = {Mixpanel Engineering},
 title = {27 | October | 2011 | Mixpanel Engineering},
-howpublished = {https://engineering.mixpanel.com/2011/10/27/},
+howpublished = {\url{https://engineering.mixpanel.com/2011/10/27/}},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
 }
 
 @misc{Introduc22:online,
-author = {},
+author = {Amazon},
 title = {Introducing Dynamic Training for deep learning with Amazon EC2 | AWS Machine Learning Blog},
-howpublished = {https://aws.amazon.com/blogs/machine-learning/introducing-dynamic-training-for-deep-learning-with-amazon-ec2/},
+howpublished = {\url{https://aws.amazon.com/blogs/machine-learning/introducing-dynamic-training-for-deep-learning-with-amazon-ec2/}},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
 }
 
 @misc{AzureBat16:online,
-author = {},
+author = {Microsoft},
 title = {Azure Batch AI | Train AI Models | Microsoft Azure},
-howpublished = {https://azure.microsoft.com/en-us/services/batch-ai/},
+howpublished = {\url{https://azure.microsoft.com/en-us/services/batch-ai/}},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
 }
 
 @misc{MXNetont32:online,
-author = {},
+author = {MxNet},
 title = {MXNet on the Cloud — mxnet documentation},
-howpublished = {https://mxnet.incubator.apache.org/faq/cloud.html?highlight=ec2},
+howpublished = {\url{https://mxnet.incubator.apache.org/faq/cloud.html?highlight=ec2}},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
 }
 
 @misc{pytorchr46:online,
-author = {},
+author = {Facebook},
 title = {pytorch/resnet50\_trainer.py at master | pytorch/pytorch},
-howpublished = {https://github.com/pytorch/pytorch/blob/master/caffe2/python/examples/resnet50_trainer.py},
+howpublished = {\url{https://github.com/pytorch/pytorch/blob/master/caffe2/python/examples/resnet50_trainer.py}},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
 }
 
 @misc{benchmar10:online,
-author = {},
+author = {Google},
 title = {tensorflow/benchmarks},
-howpublished = {https://github.com/tensorflow/benchmarks/tree/master/scripts/tf_cnn_benchmarks},
+howpublished = {\url{https://github.com/tensorflow/benchmarks/tree/master/scripts/tf_cnn_benchmarks}},
 month = {},
 year = {},
 note = {(Accessed on 12/07/2018)}
@@ -1445,9 +1452,9 @@ doi = {10.13140/2.1.4422.3363}
 }
 
 @misc{softroce,
-author = {},
+author = {SoftRoCE},
 title = {Soft RDMA over Ethernet (RoCE) Driver},
-howpublished = {https://github.com/SoftRoCE/rxe-dev/wiki/rxe-dev:-Home},
+howpublished = {\url{https://github.com/SoftRoCE/rxe-dev/wiki/rxe-dev:-Home}},
 month = {},
 year = {},
 note = {(Accessed on 12/16/2018)}
@@ -1476,7 +1483,7 @@ doi = {10.1145/3267809.3267810}
 
 
 @misc{TopEight59:online,
-author = {},
+author = {Marvell},
 title = {Top Eight Data Center Trends For Keeping up with High Data Bandwidth Demand - Marvell - Blog Marvell – Blog},
 howpublished = {https://blogs.marvell.com/2017/04/top-eight-data-center-trends-for-keeping-up-with-high-data-bandwidth-demand/},
 month = {},
@@ -1495,18 +1502,18 @@ note = {(Accessed on 02/25/2019)}
 }
 
 @misc{affinity2Distance,
-author = {},
+author = {SciKit},
 title = {4.8. Pairwise metrics, Affinities and Kernels. scikit-learn 0.20.2 documentation},
-howpublished = {https://scikit-learn.org/stable/modules/metrics.html},
+howpublished = {\url{https://scikit-learn.org/stable/modules/metrics.html}},
 month = {},
 year = {},
 note = {(Accessed on 02/06/2019)}
 }
 
 @misc{NTTTCP,
-author = {},
+author = {Microsoft},
 title = {Microsoft/ntttcp-for-linux: A Linux network throughput multiple-thread benchmark tool.},
-howpublished = {https://github.com/Microsoft/ntttcp-for-linux},
+howpublished = {\url{https://github.com/Microsoft/ntttcp-for-linux}},
 month = {},
 year = {},
 note = {(Accessed on 02/06/2019)}
@@ -1526,27 +1533,27 @@ ISSN={0733-8716},
 month={Aug},}
 
 @misc{Createan37:online,
-author = {},
+author = {Microsoft},
 title = {Create an Azure virtual machine with Accelerated Networking | Microsoft Docs},
-howpublished = {https://docs.microsoft.com/en-us/azure/virtual-network/create-vm-accelerated-networking-cli},
+howpublished = {\url{https://docs.microsoft.com/en-us/azure/virtual-network/create-vm-accelerated-networking-cli}},
 month = {},
 year = {},
 note = {(Accessed on 01/06/2019)}
 }
 
 @misc{Enablean80:online,
-author = {},
+author = {Amazon},
 title = {Enable and Configure Enhanced Networking for EC2 Instances},
-howpublished = {https://aws.amazon.com/premiumsupport/knowledge-center/enable-configure-enhanced-networking/},
+howpublished = {\url{https://aws.amazon.com/premiumsupport/knowledge-center/enable-configure-enhanced-networking/}},
 month = {},
 year = {},
 note = {(Accessed on 01/06/2019)}
 }
 
 @misc{NVIDIAnc61:online,
-author = {},
+author = {Nvidia},
 title = {NVIDIA/nccl-tests: NCCL Tests},
-howpublished = {https://github.com/NVIDIA/nccl-tests},
+howpublished = {\url{https://github.com/NVIDIA/nccl-tests}},
 month = {},
 year = {},
 note = {(Accessed on 01/06/2019)}
@@ -1619,9 +1626,9 @@ publisher = {{USENIX} Association},
 }
 
 @misc{Nowanyon13:online,
-author = {},
+author = {FastAI},
 title = {Now anyone can train Imagenet in 18 minutes · fast.ai},
-howpublished = {https://www.fast.ai/2018/08/10/fastai-diu-imagenet/},
+howpublished = {\url{https://www.fast.ai/2018/08/10/fastai-diu-imagenet/}},
 month = {},
 year = {},
 note = {(Accessed on 12/20/2018)}
@@ -1668,7 +1675,7 @@ note = {(Accessed on 12/20/2018)}
 }
 
 @misc{NetlinkW13:online,
-author = {},
+author = {Wikipedia},
 title = {Netlink Wikipedia},
 howpublished = {\url{https://en.wikipedia.org/wiki/Netlink##cite_note-4}},
 month = {},
@@ -1744,25 +1751,25 @@ note = {(Accessed on 12/22/2018)}
 }
 
 @misc{dmlcpsli50:online,
-author = {},
+author = {MxNet},
 title = {dmlc/ps-lite: A lightweight parameter server interface},
-howpublished = {https://github.com/dmlc/ps-lite},
+howpublished = {\url{https://github.com/dmlc/ps-lite}},
 month = {},
 year = {},
 note = {(Accessed on 12/22/2018)}
 }
 
 @misc{facebook35:online,
-author = {},
+author = {Facebook},
 title = {facebookincubator/gloo: Collective communications library with various primitives for multi-machine training.},
-howpublished = {https://github.com/facebookincubator/gloo},
+howpublished = {\url{https://github.com/facebookincubator/gloo}},
 month = {},
 year = {},
 note = {(Accessed on 12/22/2018)}
 }
 
 @misc{Evaluati26:online,
-author = {},
+author = {Kishan Maladkar},
 title = {Evaluation Of Major Deep Learning Frameworks With Benchmark},
 howpublished = {https://www.analyticsindiamag.com/evaluation-of-major-deep-learning-frameworks/},
 month = {},
@@ -1909,9 +1916,9 @@ title = {Deep Learning Inference in Facebook Data Centers: Characterization, Per
 }
 
 @misc{sagemaker,
-author = {},
+author = {Amazon},
 title = {Amazon EC2 F1 Instances},
-howpublished = {https://aws.amazon.com/ec2/instance-types/f1},
+howpublished = {\url{https://aws.amazon.com/ec2/instance-types/f1}},
 month = {},
 year = {},
 note = {(Accessed on 03/04/2019)}
@@ -1979,7 +1986,7 @@ month={June},}
 
 @Inproceedings{data-center-tcp-dctcp,
 author = {Alizadeh, Mohammad and Greenberg, Albert and Maltz, Dave and Padhye, Jitu and Pate, Parveen and Prabhakar, Balaji and  and Sridharan, Murari},
-title = {Data Center TCP (DCTCP)},
+title = {{}Data Center TCP (DCTCP)}},
 year = {2010},
 month = {September},
 abstract = {Cloud data centers host diverse applications, mixing workloads that require small predictable latency with others requiring large sustained throughput. In this environment, today’s state-of-the-art TCP protocol falls short. We present measurements of a 6000 server production cluster and reveal impairments that lead to high application latencies, rooted in TCP’s demands on the limited buffer space available in data center switches. For example, bandwidth hungry “background” flows build up queues at the switches, and thus impact the performance of latency sensitive “foreground” traffic. To address these problems, we propose DCTCP, a TCP-like protocol for data center networks. DCTCP leverages Explicit Congestion Notification (ECN) in the network to provide multi-bit feedback to the end hosts. We evaluate DCTCP at 1 and 10Gbps speeds using commodity, shallow buffered switches. We find DCTCP delivers the same or better throughput than TCP, while using 90% less buffer space. Unlike TCP, DCTCP also provides high burst tolerance and low latency for short flows. In handling workloads derived from operational measurements, we found DCTCP enables the applications to handle 10X the current background traffic, without impacting foreground traffic. Further, a 10X increase in foreground traffic does not cause any timeouts, thus largely eliminating incast problems.},
@@ -2062,7 +2069,7 @@ Heterogeneous Network Hierarchy},
 
 
 @misc{Introduc92:online,
-author = {},
+author = {Amazon},
 title = {Introducing Amazon EC2 C5n Instances Featuring 100 Gbps of Network Bandwidth},
 howpublished = {https://aws.amazon.com/about-aws/whats-new/2018/11/introducing-amazon-ec2-c5n-instances/},
 month = {},
@@ -2129,7 +2136,7 @@ note = {Recognized as one of "the most important research results published in C
 }
 
 @misc{nccl,
-author = {},
+author = {Nvidia},
 title = {NVIDIA Collective Communications Library},
 howpublished = {https://developer.nvidia.com/nccl}},
 month = {},
@@ -2240,7 +2247,7 @@ note = {(Accessed on 03/19/2019)}
 }
 
 @misc{NewC5nIn6:online,
-author = {},
+author = {Amazon},
 title = {New C5n Instances with 100 Gbps Networking | AWS News Blog},
 howpublished = {https://aws.amazon.com/blogs/aws/new-c5n-instances-with-100-gbps-networking/},
 month = {},
@@ -2249,7 +2256,7 @@ note = {(Accessed on 02/04/2020)}
 }
 
 @misc{Introduc9:online,
-author = {},
+author = {Microsoft},
 title = {Introducing the new HB and HC Azure VM sizes for HPC | Azure Blog and Updates | Microsoft Azure},
 howpublished = {https://azure.microsoft.com/en-us/blog/introducing-the-new-hb-and-hc-azure-vm-sizes-for-hpc/},
 month = {},
@@ -2282,7 +2289,7 @@ journal = {lecture notes of EE392o, Stanford University, Autumn Quarter}
 }
 
 @misc{AIResear61:online,
-author = {},
+author = {Nvidia},
 title = {AI Research \& Development | NVIDIA DGX Systems},
 howpublished = {\url{https://www.nvidia.com/en-us/data-center/dgx-systems/}},
 month = {},
@@ -2361,7 +2368,7 @@ series = {SOSP ’19}
 }
 
 @misc{TuringNL61:online,
-author = {},
+author = {Microsoft},
 title = {Turing-NLG: A 17-billion-parameter language model by Microsoft - Microsoft Research},
 howpublished = {\url{https://www.microsoft.com/en-us/research/blog/turing-nlg-a-17-billion-parameter-language-model-by-microsoft/}},
 month = {},
@@ -2414,7 +2421,7 @@ note = {(Accessed on 11/06/2019)}
 }
 
 @misc{glooalgo70:online,
-author = {},
+author = {Facebook},
 title = {gloo/algorithms.md at master · facebookincubator/gloo},
 howpublished = {\url{https://github.com/facebookincubator/gloo/blob/master/docs/algorithms.md}},
 month = {},
